--- a/articles/templates/articles/articlelist.html
+++ b/articles/templates/articles/articlelist.html
@@ -5,11 +5,12 @@ article_list
 {% endblock%}
 
 {% block content %}
+<div class="container">
     <h1>Articles list:</h1>
     {% for article in articles %}
     <h2><a href="{% url 'articles:details' slug=article.slug %}">{{ article.title }}</a></h2>
     <p>{{ article.snippet }}</p>
     <p>{{ article.date }}</p>
     {% endfor %}
-
+</div>
 {% endblock%}
